--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,15 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Sacramento&display=swap');
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
-  box-sizing: border-box;
+@layer base {
+  body {
+    @apply font-quicksand  bg-dark;
+  }
+
+  .btn {
+    @apply text-white rounded-md drop-shadow-md bg-blue px-5 py-2 text-lg md:text-xl lg:text-2xl block uppercase font-bold;
+  }
 }
